@@ -8,10 +8,6 @@
 #include <string.h>
 #include <errno.h>
 
-#ifndef _GNU_SOURCE
-# define _GNU_SOURCE
-#endif
-
 #include <time.h>
 
 /*
