@@ -50,6 +50,7 @@ NEWS
   * Fix segfault on invalid config "duplicate else conditions" (fixes #2065)
   * mod_usertrack: Use T_CONFIG_INT for max-age, solves range problem (#1455)
   * mod_accesslog: configurable timestamp logging (fixes #1479)
+  * always define _GNU_SOURCE
 
 - 1.4.23 - 2009-06-19
   * Added some extra warning options in cmake and fix the resulting warnings (unused/static functions)
